--- a/minishell/minishell/CMakeLists.txt
+++ b/minishell/minishell/CMakeLists.txt
@@ -1,8 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.23)
+project(Prak2)
 
-project(minishell LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 14)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-add_executable(minishell main.cpp)
+add_executable(Prak2 main.cpp)
